[tool.poetry]
name = "dsa"
version = "0.1.0"
description = ""
authors = ["Connor Radley <connor.radley@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pylint = "^3.0.3"
black = "^23.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
